manifests/dev/redis/Deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis
  name: redis
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: redis
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: redis
        app.kubernetes.io/name: redis
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - sh
            - -c
            - redis-server --requirepass "$REDIS_PASSWORD" --appendonly yes
          image: redis:8-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli --no-auth-warning -a "$REDIS_PASSWORD" ping
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli --no-auth-warning -a "$REDIS_PASSWORD" ping
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /data
              name: data
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-redis-data
